fix(css): fixed overlapping slots

--- a/html/src/index.scss
+++ b/html/src/index.scss
@@ -43,7 +43,7 @@ body {
   overflow-y: scroll;
   direction: ltr;
   display: grid;
-  height: 52vh;
+  height: 51vh;
   grid-template-columns: repeat(5, 10.2vh);
   grid-auto-rows: 10.2vh;
   gap: 2px;
